styles.css
@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

*,
*::before,
*::after {
    box-sizing: border-box;
}

html {
    -moz-text-size-adjust: none;
    -webkit-text-size-adjust: none;
    text-size-adjust: none;
}

body, h1, h2, p {
    margin-block-end: 0;
    margin-block-start: 0;
}

h1, h2 {
    line-height: 1.1;
}

a:not([class]) {
    text-decoration-skip-ink: auto;
}

:target {
    scroll-margin-block: 5ex;
}

body {
    min-height: 100vh;
    padding: 1rem;
    margin: 0;
    background-color: hsl(30, 38%, 92%);

    display: grid;
    place-items: center;
    grid-template-rows: 1fr auto;
    gap: 2rem;
}

.product {
    width: 100%;
    max-width: 40rem;
    min-width: 18em;
    border-radius: 10px;
    background-color: hsl(0, 0%, 100%);
}

.product__details {
    gap: 17px;
    padding: 1.5rem;
    display: flex;
    flex-direction: column;
}

.product__image {
    width: 100%;
    block-size: auto;
    object-fit: cover;
    object-position: center;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}

.product__category {
    font-family: 'Montserrat', 'serif';
    font-weight: 500;
    font-size: .8rem;
    letter-spacing: .5em;
    color: hsl(228, 12%, 48%);
}

.product__title {
    font-family: 'Fraunces', 'serif';
    font-weight: 700;
    font-size: 2rem;
    color: hsl(212, 21%, 14%);
}

.product__description {
    font-family: 'Montserrat', 'serif';
    font-weight: 450;
    letter-spacing: .02em;
    line-height: 1.5rem;
    font-size: .9rem;
    color: hsl(228, 12%, 48%);
}

.product__pricing{
    display: flex;
    align-items: center;
    gap: 20px;
}

.product__price {
    font-family: 'Fraunces', 'serif';
    font-size: 2rem;
    font-weight: 700;
    color: hsl(158, 36%, 37%);
}

.product__price--old {
    font-family: 'Montserrat', 'serif';
    font-size: .9rem;
    font-weight: 500;
    color: hsl(228, 12%, 48%);
}

.product__button {
    font-family: 'Montserrat', 'serif';
    font-size: .9rem;
    font-weight: 700;

    gap: 1em;
    padding: 1.2em .5em;
    border-radius: 10px;
    border: none;
    cursor: pointer;
    color: hsl(0, 0%, 100%);
    background-color: hsl(158, 36%, 37%);
    transition: background-color 0.3s ease, color 0.3s ease;

    display: flex;
    justify-content: center;
    align-items: center;
}

.product__button:hover {
    background-color: hsl(158, 38%, 18%);
}

.product__button:active {
    transform: scale(0.95);
}

footer {
    font-size: .7rem;
    text-align: center;
    color: hsl(35, 8%, 29%);
}

footer a {
    color: hsl(228, 45%, 44%)
}

@media (max-width: 374px) {

    .product__title {
        font-size: 1.7rem;
    }
  }

@media (min-width: 1024px) {

    .product {
        display: grid;
        grid-template-columns: 1fr 1fr;
        width: 100%;
    }

    .product__image {
        height: 100%;
        object-position: center;
        border-top-left-radius: 10px;
        border-top-right-radius: 0;
        border-bottom-left-radius: 10px;
    }

    .product__details{
        padding: 2.1rem;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
    }

    .product__title {
        letter-spacing: .025em;
    }
  }

